--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head>
       <title>Taiwanese Oolong Teas</title>
       <link rel="stylesheet" href="Style.css" type="text/css"/>
-    </head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&family=Roboto&display=swap" rel="stylesheet">
+      
+    
+</head>
 <body>
     <header class="flex-container">
         <p class="logo">Taiwanese Oolong Tea</p>
